--- a/sidedishserver/src/main/resources/application.yml
+++ b/sidedishserver/src/main/resources/application.yml
@@ -1,1 +1,18 @@
+spring:
+  datasource:
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:sidedish
+    username: sa
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:db/schema.sql
+#      data-locations: classpath:db/data.sql
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
+logging:
+  level:
+    web: DEBUG
